--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,7 +15,7 @@ header .termin-buchen-btn:hover {
 }
 
 :root {
-  --background: #ffffff;
+  --background: #0a0a0a;
   --foreground: #171717;
   --color-main-green: rgb(0, 235, 172);
   --color-main-yellow: rgb(238, 193, 107);
